[package]
name = "oopsie_woopsie"
version = "0.1.0"
edition = "2021"

[features]
panic_log = ["dep:directories", "dep:anyhow"]
minidump = ["dep:minidump-writer", "dep:thread-id", "dep:directories", "dep:anyhow"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", optional = true }
directories = { version = "5.0.1", optional = true }
minidump-writer = { version = "0.8.2", optional = true }
panic-message = "0.3.0"
thread-id = { version = "4.2.0", optional = true }
